--- a/page-de-don.html
+++ b/page-de-don.html
@@ -25,7 +25,7 @@
     <p class="don">Un petit geste, un grand impact.</p>
     <div class="row formul">
         <div class="col formulai">
-            <form action="" method="post">
+            <form action="enrigistrer-don.php" method="POST">
                 <label for="prenomnom">Prénom et nom </label> <br>
                 <input type="text" id="prenomnom" name="prenomnom" placeholder="Prenom et nom"><br>
                 <label for="adresse">Adresse</label><br>
@@ -104,6 +104,7 @@
                 <p class="p-footer">+221 33 900 00 00</p>
                 <p class="p-footer">donducoeur@gmail.com</p>
                 <h4>Suivez nous sur</h4>
+                <img src="images/icone-sociaux_Plan de travail 1.jpg" alt="">
             </div>
         </div>
         <div class="footer-bottom" style="background-color: #ff7f00;">
