modificaton des erreurs

--- a/page-de-don.html
+++ b/page-de-don.html
@@ -25,7 +25,7 @@
     <p class="don">Un petit geste, un grand impact.</p>
     <div class="row formul">
         <div class="col formulai">
-            <form action="enrigistrer-don.php" method="POST">
+            <form action="enregistrer-don.php" method="POST">
                 <label for="prenomnom">Prénom et nom </label> <br>
                 <input type="text" id="prenomnom" name="prenomnom" placeholder="Prenom et nom"><br>
                 <label for="adresse">Adresse</label><br>
@@ -55,7 +55,7 @@
                 </select><br>
                 <label for="description"> Description du don</label><br>
                 <textarea name="description" id="description" rows="4" placeholder="Décrivez votre don..."></textarea>
-            </form>
+            
         </div>
         <div class="col coul">
             <img src="images/don6.jpg" alt="" class="doncoeur">
@@ -66,6 +66,7 @@
     <div class="btn">
         <button type="submit" class="bouton">Envoyer</button>
     </div>
+    </form>
     <div class="row">
         <div class="col">
             <img src="images/wave_Plan de travail 1.jpg" alt="">
