--- a/Nosprojets.html
+++ b/Nosprojets.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="nosprojets.css">
+    <link rel="stylesheet" href="Nosprojets.css">
     <link rel="icon" type="image/jpg" href="images/favicon_Plan de travail 1.jpeg.jpeg">
     <title>Page Nos projet</title>
 </head>
@@ -22,7 +22,7 @@
     </nav>
 
     <section class="projets-section container py-5">
-    <h2 class="text-center">Nos projets en cours</h2>
+    <h2 class="text-center text-success mb-4">Nos projets en cours</h2>
     <p class="text-center text-muted mb-5">
         Avec <strong>Don du Cœur</strong>, chaque geste devient un élan de solidarité. Rejoignez-nous dans cette belle aventure humaine et offrons ensemble un avenir meilleur à ceux qui en ont besoin.
     </p>
@@ -30,36 +30,36 @@
     <div class="row g-4">
         <!-- Projet 1 -->
         <div class="col-md-4">
-            <div class="card project-card h-100">
-                <img src="images/payement ordonnance.jpeg" class="card-img-top" alt="Payement ordonnance">
-                <div class="card-body">
+            <div class="card project-card h-100 border-0" style="border-radius: 15px; overflow: hidden;">
+                <img src="images/payement ordonnance.jpeg" class="card-img-top" alt="Payement ordonnance"style="border-radius: 45px 45px 0 0;">
+                <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h5 class="card-title">Payement ordonnance</h5>
                     <p class="card-text">Nous nous engageons à aider les personnes en difficulté en prenant en charge le paiement de leurs ordonnances médicales ou de leurs soins hospitaliers, car la santé ne devrait jamais être un luxe</p>
-                    <a href="#" class="btn btn-warning">Soutenir</a>
+                    <a href="pages_de_don.html" class="btn btn-warning" style="background-color: #ff7f00; border-color: #ff7f00; color: white; border-radius: 25px;">Soutenir</a>
                 </div>
             </div>
         </div>
 
         <!-- Projet 2 -->
         <div class="col-md-4">
-            <div class="card project-card h-100">
-                <img src="images/collecte vetement.jpeg" class="card-img-top" alt="collecte vetement">
-                <div class="card-body">
-                    <h5 class="card-title">collecte de vêtements et  pour les daaras</h5>
-                    <p class="card-text">Nous organisons cette collecte pour soutenir les daaras, afin d'assurer que chaque enfant ait accès à des vêtements appropriés et à une alimentation suffisante.</p>
-                    <a href="#" class="btn btn-warning">Soutenir</a>
+           <div class="card project-card h-100 border-0" style="border-radius: 15px; overflow: hidden;">
+                <img src="images/collecte vetement.jpeg" class="card-img-top" alt="collecte vetement"style="border-radius: 45px 45px 0 0;">
+                <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
+                    <h5 class="card-title">collecte de vêtements pour les daaras</h5>
+                    <p class="card-text">Nous organisons cette collecte pour soutenir les daaras, afin d'assurer que chaque enfant ait accès à des vêtements appropriés.un vêtement propre et adapter peut transformer la perception d'un enfants</p>
+                    <a href="#" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>
                 </div>
             </div>
         </div>
 
         <!-- Projet 3 -->
         <div class="col-md-4">
-            <div class="card project-card h-100">
-                <img src="images/construction.jpeg" class="card-img-top" alt=" Construction d’une espace de jeux ">
-                <div class="card-body">
+            <div class="card project-card h-100 border-0" style="border-radius: 15px; overflow: hidden;">
+                <img src="images/construction.jpeg" class="card-img-top" alt=" Construction d’une espace de jeux"style="border-radius: 45px 45px 0 0;">
+                <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h5 class="card-title">Construction d’une espace de jeux  </h5>
                     <p class="card-text">Nous projetons de construire un espace de jeux sécurisé et accueillant pour les enfants, afin de leur offrir un lieu où ils peuvent s'amuser, apprendre et se développer en toute sécurité.</p>
-                    <a href="#" class="btn btn-warning">Soutenir</a>
+                    <a href="#" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>
                 </div>
             </div>
         </div>
@@ -69,43 +69,42 @@
     <div class="row g-4 mt-4">
         <!-- Projet 4 -->
         <div class="col-md-4">
-            <div class="card project-card h-100">
-                <img src="images/consultation gratuit.jpeg" class="card-img-top" alt="Consultation gratuit">
-                <div class="card-body">
+            <div class="card project-card h-100 border-0" style="border-radius: 15px; overflow: hidden;">
+                <img src="images/consultation gratuit.jpeg" class="card-img-top" alt="Consultation gratuit"style="border-radius: 45px 45px 0 0;">
+                <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h5 class="card-title">Consultation gratuit</h5>
                     <p class="card-text">Nous offrons une journée de consultation gratuite pour permettre à tous d'accéder à des soins médicaux de qualité, sans barrière financière, et de promouvoir le bien-être de notre communauté.</p>
-                    <a href="#" class="btn btn-warning">Soutenir</a>
-                </div>
+                    <a href="#" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>                </div>
             </div>
         </div>
 
         <!-- Projet 5 -->
         <div class="col-md-4">
-            <div class="card project-card h-100">
-                <img src="images/projet-formations.jpg" class="card-img-top" alt="Formations">
-                <div class="card-body">
+            <div class="card project-card h-100 border-0" style="border-radius: 15px; overflow: hidden;">
+                <img src="images/istockphoto-1372606877-612x612.webp" class="card-img-top" alt="Formations"style="border-radius: 45px 45px 0 0;">
+                <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h5 class="card-title">Formations gratuites</h5>
-                    <p class="card-text">Formations à la vie active pour les jeunes sans emploi.</p>
-                    <a href="#" class="btn btn-warning">Soutenir</a>
+                    <p class="card-text">"La connaissance est un droit, pas un privilège. C'est pourquoi<strong> Don du coeur </strong> s'engage à offrir des formations gratuites à des jeunes défavorisés,pour leur permettre de développer leurs compétences et de construire un avenir meilleur.</p>
+                    <a href="#" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>
                 </div>
             </div>
         </div>
 
         <!-- Projet 6 -->
         <div class="col-md-4">
-            <div class="card project-card h-100">
-                <img src="images/projet-evenement.jpg" class="card-img-top" alt="Événement solidaire">
-                <div class="card-body">
+           <div class="card project-card h-100 border-0" style="border-radius: 15px; overflow: hidden;">
+                <img src="images/evenement.webp" class="card-img-top" alt="Événement solidaire"style="border-radius: 45px 45px 0 0;">
+                <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h5 class="card-title">Événements solidaires</h5>
-                    <p class="card-text">Moments de partage et d'écoute pour tisser du lien social.</p>
-                    <a href="#" class="btn btn-warning">Soutenir</a>
+                    <p class="card-text">Nous avons besoin de votre cœur et de votre générosité pour réaliser un rêve : construire une Maison des Enfants chaleureuse et accueillante pour les enfants défavorisés de notre communauté.</p>
+                    <a href="#" class="btn btn-warning"style="background-color: #ff7f00; border-color: #ff7f00; color: white;">Soutenir</a>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<<section class="nos-actions py-5">
+<section class="nos-actions py-5">
   <div class="container">
     <h2 class="text-center text-success mb-4">Nos actions</h2>
     <p class="text-center text-muted mb-5">
@@ -114,16 +113,17 @@
 
     <div class="row g-4">
       <!-- Action 1 -->
-      <div class="col-md-6 d-flex">
-        <div class="action-box d-flex bg-success text-white p-3 rounded flex-grow-1">
-          <img src="images/action1.jpg" alt="action 1" class="img-fluid me-3 action-img">
-          <p class="mb-0">Organisation d’ateliers éducatifs et artistiques pour enfants démunis.</p>
+       <div class="col-md-6 d-flex">
+        <div class="action-box d-flex bg-success text-white p-3 rounded border flex-grow-1">
+          <img src="images/Dons de sang.jpeg" alt="action 1" class="img-fluid me-3 action-img">
+          <p class="mb-0"><strong class="text-warning">Organisation de 
+dons de sang</strong> <br> En collaboration avec des organisations sanitaires , nous avons organisé des campagnes de don de sang, permettant de sauver des vies et de renforcer la solidarité communautaire..</p>
         </div>
       </div>
 
       <!-- Action 2 -->
       <div class="col-md-6 d-flex">
-        <div class="action-box d-flex bg-white text-dark p-3 rounded border flex-grow-1">
+        <div class="action-box d-flex bg-success text-dark p-3 rounded border flex-grow-1">
           <img src="images/Dons de sang.jpeg" alt="action 2" class="img-fluid me-3 action-img">
           <p class="mb-0"><strong class="text-warning">Organisation de 
 dons de sang</strong> <br> En collaboration avec des organisations sanitaires , nous avons organisé des campagnes de don de sang, permettant de sauver des vies et de renforcer la solidarité communautaire..</p>
