integration de lien pour acceder a la page de don

--- a/Nosprojets.html
+++ b/Nosprojets.html
@@ -35,7 +35,7 @@
                 <div class="card-body"style="background-color: #00561b;border-radius: 0 0 45px 45px;">
                     <h5 class="card-title">Payement ordonnance</h5>
                     <p class="card-text">Nous nous engageons à aider les personnes en difficulté en prenant en charge le paiement de leurs ordonnances médicales ou de leurs soins hospitaliers, car la santé ne devrait jamais être un luxe</p>
-                    <a href="pages_de_don.html" class="btn btn-warning" style="background-color: #ff7f00; border-color: #ff7f00; color: white; border-radius: 25px;">Soutenir</a>
+                    <a href="page-de-don.html" class="btn btn-warning" style="background-color: #ff7f00; border-color: #ff7f00; color: white; border-radius: 25px;">Soutenir</a>
                 </div>
             </div>
         </div>
@@ -141,7 +141,7 @@ dons de sang</strong> <br> En collaboration avec des organisations sanitaires , 
       <!-- Action 4 -->
       <div class="col-md-6 d-flex">
         <div class="action-box d-flex bg-white text-dark p-3 rounded border flex-grow-1">
-          <img src="images/action4.jpg" alt="action 4" class="img-fluid me-3 action-img">
+          <img src="images/evenement.webp" alt="action 4" class="img-fluid me-3 action-img">
           <p class="mb-0"><strong class="text-warning">Création de kits d'hygiène</strong> distribués chaque mois dans les zones rurales.</p>
         </div>
       </div>
