--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/jpg" href="images/favicon_Plan de travail 1.jpg">
-    <title>Page de don</title>
+    <link rel="icon" type="image/jpg" href="C:\Users\maria\Memoire---E-social/favicon_Plan de travail 1.jpg">
+    <title>Page d'Accueil</title>
 </head>
 
 <body>
@@ -20,12 +20,119 @@
         <a href="page-demamde-aide.html" class="menu">Demande d'aide</a>
         <a href="page-connexion.html" class="menu">Connexion</a>
     </nav>
+    <section class="hero-section">
+        <div class="container">
+            <h1>Bienvenue sur Don Du Coeur</h1>
+            <p>Ensemble, semons la solidarité et récoltons l'espoir.</p>
+        </div>
+    </section>
 
-
-
-
-
-
+    <section class="py-5 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col icon-box">
+                    <h3>+85</h3>
+                    <p>donations</p>
+                </div>
+            </div>
+             <div class="col icon-box">
+                <h3>+50</h3>
+                <p>projets réalisés</p>
+             </div>
+              <div class="col icon-box">
+                <h3>+36</h3>
+                <p>volontaires</p>
+              </div>
+        </div>
+    </section>
+    <section class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center">DONS URGENTS</h2>
+            <P class="text-center"></P>
+            <div class="text-center mt-3">
+                <a href="#" class="btn btn-orange">Faire un don</a>
+            </div>
+            <section class="py-5">
+                <div class="container">
+                    <h2 class="text-center">NOTRE MISSION</h2>
+                    <P class="text-center"></P>
+                </div>
+            </section>
+            <Section class="bg-success text-white py-5 text-center">
+                <div class="container">
+                    <h3>Pourquoi nous soutenir</h3>
+                    <p></p>
+                    <a href="#" class="btn btn-light">Faire un don</a>
+                </div>
+            </Section>
+            <section class="py-5">
+                <div class="container text-center">
+                    <h3 class="text-warning">A propos de nous</h3>
+                    <p></p>
+                    <a href="#" class="btn btn-success">En savoir plus</a>
+                </div>
+            </section>
+            <section class="py-5 bg-light">
+                <div class="container">
+                    <h3 class="text-center">Nos actions</h3>
+                    <div class="row text-center mt-4">
+                        <div class="col-md-3 mb-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5></h5>
+                                    <p></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               <div class="col-md-3 mb-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5></h5>
+                                    <p></p>
+                                </div>
+                           </div>
+                    </div>
+                     <div class="col-md-3 mb-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5></h5>
+                                    <p></p>
+                                </div>
+                           </div>
+                    </div>
+                     <div class="col-md-3 mb-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5></h5>
+                                    <p></p>
+                                </div>
+                           </div>
+                    </div>
+                    <div class="text-center">
+                        <a href="#" class="btn btn-success">En savoir plus</a>
+                    </div> 
+               </div>
+            </section>
+            <section class="py-5 text-center">
+                <div class="container">
+                    <h3>Besoin d'aide Faites une demande de don</h3>
+                    <p></p>
+                    <a href="#"class="btn btn-orange">Faire une demande de don</a>
+                </div>
+                <section class="py-5 bg-light text-center">
+                    <div class="container">
+                        <h4>Merci pour vos dons</h4>
+                        <p></p>
+                        <div class="row mt-3">
+                            <!-- Images bénévoles (ajoutez vos images ici) -->
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </div>
+    </section>
 
     <footer>
 
