quelques modifications dans le footer

--- a/page-demande-aide.html
+++ b/page-demande-aide.html
@@ -30,7 +30,7 @@
 <div class="dernier">Ensemble nous semons des graines  d’espoir,<br> de solidarité et de compassion. <br>
     Vos demandes seront traitées avec  amour <br> et dans les régles <br> de la confidentialité. 
     Vous n’ étes pas  seule<br> nous sommes là pour <br> vous tendre la main  et vous redonner le sourir <br>
-       &lt; &lt; un don, un sourire &lt; &lt;
+       &lt; &lt; un don, un sourire >>
 </div>
 
  </div>
@@ -94,6 +94,7 @@
                 <p class="p-footer">+221 33 900 00 00</p>
                 <p class="p-footer">donducoeur@gmail.com</p>
                 <h4>Suivez nous sur</h4>
+                <img src="images/icone-sociaux_Plan de travail 1.jpg" alt="">
             </div> 
         </div>
         <div class="footer-bottom" style="background-color: #ff7f00;">
