Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="entete">
-        <img src="C:\Users\maria\Memoire---E-social/don-du-coeur.jpg.jpeg" alt="" class="logo">
+        <img src="C:\Users\maria\Memoire---E-social/don-du-coeur.jpg." alt="" class="logo">
         <a href="index.html" class="menu">Accueil</a>
         <a href="page-a-propos.html" class="menu">A propos de nous</a>
         <a href="page-nos-projets.html" class="menu">Nos projets</a>
@@ -138,7 +138,7 @@
 
         <div class="row foot" style="background-color: #ff7f00;height: 200px;">
             <div class="col">
-                <img src="C:\Users\maria\Memoire---E-social/don-du-coeur.jpg.jpeg" alt="" class="logo-footer">
+                <img src="C:\Users\maria\Memoire---E-social/don-du-coeur.jpg." alt="" class="logo-footer">
                 <p class="texte-footer">Notre equipe s’engage à vous apporter leurs plus grand soutien chaque demande
                     sera traitée avec attention, confidentialité et humanité.</p>
             </div>
@@ -159,7 +159,7 @@
                 <p class="p-footer">+221 33 900 00 00</p>
                 <p class="p-footer">donducoeur@gmail.com</p>
                 <h4>Suivez nous sur</h4>
-                <img src="C:\Users\maria\Memoire---E-social/icone-sociaux_Plan de travail 1.jpg.jpeg" alt="" class="">
+                <img src="C:\Users\maria\Memoire---E-social/icone-sociaux_Plan de travail 1.jpg." alt="" class="">
             </div> 
         </div>
         <div class="footer-bottom" style="background-color: #ff7f00;">
