Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <section class="py-5">
                 <div class="container text-center">
                     <h3 class="text-warning">A propos de nous</h3>
-                    <p></p>
+                    <p>Nous sommes une association engagée pour le bien-etre des communautés vulnérables.Grace a l'implication de nos bénévoles et donateurs, nous menons des actions concrétes pour améliorer le quotidien des personnes en situation de précarité. Notre mission: servir avec humanité, construire avec espoir.<div class=""></div></p>
                     <a href="#" class="btn btn-success">En savoir plus</a>
                 </div>
             </section>
