Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="col-md-3 mb-4">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5></h5>
+                                    <h5>Collecte et distribution de kits scolaires</h5>
                                     <p></p>
                                 </div>
                             </div>
@@ -89,7 +89,15 @@
                <div class="col-md-3 mb-4">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5></h5>
+                                    <h5>Distribution de ndogou pendant le Ramadan</h5>
+                                    <p></p>
+                                </div>
+                           </div>
+                    </div>
+                     <div class="col-md-3 mb-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5>Construction d'un espace de jeux</h5>
                                     <p></p>
                                 </div>
                            </div>
@@ -98,15 +106,7 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h5></h5>
-                                    <p></p>
-                                </div>
-                           </div>
-                    </div>
-                     <div class="col-md-3 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5></h5>
-                                    <p></p>
+                                    <p>Organisation de dons de sang</p>
                                 </div>
                            </div>
                     </div>
@@ -118,7 +118,7 @@
             <section class="py-5 text-center">
                 <div class="container">
                     <h3>Besoin d'aide Faites une demande de don</h3>
-                    <p></p>
+                    <p>Notre association est la pour vous accompagner dans les moments difficiles. Si vous traversez une période de précarité ou si vous connaissez quelqu'un dans le besoin , vous pouvez nous adresserune demande de don.</p>
                     <a href="#"class="btn btn-orange">Faire une demande de don</a>
                 </div>
                 <section class="py-5 bg-light text-center">
