--- a/page-demande-aide.html
+++ b/page-demande-aide.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="demande-aide.css">
     <link rel="icon" type="image/jpg" href="images/favicon_Plan de travail 1.jpg">
+    <script src="message-envoi.js" defer></script>
     <title>Page demande d'aide</title>
 </head>
 
@@ -60,9 +61,9 @@
     <label for="descriptions" class="required">Description</label><br>
     <textarea name="descriptions"  id="" cols="30" rows="10" placeholder="Tapez ici..." required></textarea><br/>
     <input type="submit" value="envoyer" class="donner">
-    
-
-    
+    <div id="merciMessage" style="display: none; color: white; background-color: green; padding: 10px; margin-top: 10px; border-radius: 5px; text-align: center;">
+  Merci pour votre demande de don. Nous vous reviendrons ultérieurement.
+    </div>
 </form>
     </div>
 </div>
