Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="page-demamde-aide.html" class="menu">Demande d'aide</a>
         <a href="page-connexion.html" class="menu">Connexion</a>
     </nav>
-    <section class="hero-section">
+    <section class="banniére">
         <div class="container">
             <h1>Bienvenue sur Don Du Coeur</h1>
             <p>Ensemble, semons la solidarité et récoltons l'espoir.</p>
@@ -48,6 +48,7 @@
     <section class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">DONS URGENTS</h2>
+            <img src="C:\Users\maria\Memoire---E-social/don-urgent.jpg" alt="">
             <P class="text-center"></P>
             <div class="text-center mt-3">
                 <a href="#" class="btn btn-orange">Faire un don</a>
