--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/jpg" href="C:\Users\maria\Memoire---E-social/favicon_Plan de travail 1.jpg">
+    <link rel="icon" type="image/jpg" href="images/favicon_Plan de travail 1.jpg">
     <title>Page d'Accueil</title>
 </head>
 
 <body>
     <nav class="entete">
-        <img src="C:\Users\maria\Memoire---E-social/don-du-coeur.jpg." alt="" class="logo">
+        <img src="images/don-du-coeur.jpg" alt="" class="logo">
         <a href="index.html" class="menu">Accueil</a>
         <a href="page-a-propos.html" class="menu">A propos de nous</a>
         <a href="page-nos-projets.html" class="menu">Nos projets</a>
@@ -48,7 +48,7 @@
     <section class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">DONS URGENTS</h2>
-            <img src="C:\Users\maria\Memoire---E-social/don-urgent.jpg" alt="">
+            <img src="images/don-urgent.jpg" alt="">
             <P class="text-center"></P>
             <div class="text-center mt-3">
                 <a href="#" class="btn btn-orange">Faire un don</a>
@@ -139,7 +139,7 @@
 
         <div class="row foot" style="background-color: #ff7f00;height: 200px;">
             <div class="col">
-                <img src="C:\Users\maria\Memoire---E-social/don-du-coeur.jpg." alt="" class="logo-footer">
+                <img src="images/don-du-coeur.jpg" alt="" class="logo-footer">
                 <p class="texte-footer">Notre equipe s’engage à vous apporter leurs plus grand soutien chaque demande
                     sera traitée avec attention, confidentialité et humanité.</p>
             </div>
@@ -160,7 +160,7 @@
                 <p class="p-footer">+221 33 900 00 00</p>
                 <p class="p-footer">donducoeur@gmail.com</p>
                 <h4>Suivez nous sur</h4>
-                <img src="C:\Users\maria\Memoire---E-social/icone-sociaux_Plan de travail 1.jpg." alt="" class="">
+                <img src="images/icone-sociaux_Plan de travail 1.jpg" alt="" class="">
             </div> 
         </div>
         <div class="footer-bottom" style="background-color: #ff7f00;">
