modification de la redirection vers la page php

--- a/page-demande-aide.html
+++ b/page-demande-aide.html
@@ -37,7 +37,7 @@
  </div>
 
     <div class="aide2">
-<form action="aide.php" method="POST">
+<form action="" method="POST">
 
 <label for="nom_prenom" class="required">Nom & Prénom</label>
 <input type="text" name="nom_prenom" placeholder="Nom complet" required> <br><br>
