Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- ENTETE -->
     <nav class="entete">
         <img src="images/don-du-coeur.jpg" alt="" class="logo">
         <a href="index.html" class="menu">Accueil</a>
@@ -20,13 +21,14 @@
         <a href="page-demamde-aide.html" class="menu">Demande d'aide</a>
         <a href="page-connexion.html" class="menu">Connexion</a>
     </nav>
+ <!-- Hero Section -->
     <section class="banniére">
         <div class="container">
             <h1>Bienvenue sur Don Du Coeur</h1>
             <p>Ensemble, semons la solidarité et récoltons l'espoir.</p>
         </div>
     </section>
-
+<!-- STATS -->
     <section class="py-5 text-center">
         <div class="container">
             <div class="row">
@@ -45,20 +47,31 @@
               </div>
         </div>
     </section>
+    <!-- DONS URGENTS-->
     <section class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center">DONS URGENTS</h2>
+            <P class="text-center">Nous avons urgemment besoin de votre soutien pour mener à bien nos missions humanitaires. Chaque jour, des femmes, des enfants, des familles entières comptent sur notre aide pour se nourrir, se soigner, s’éduquer ou tout simplement vivre dignement. Grâce à votre contribution, nous pouvons continuer à organiser des collectes de vivres, des dons de sang, distribuer des kits scolaires et construire un avenir plus solidaire.Agissons ensemble, maintenant. Votre générosité peut tout changer.</P>
             <img src="images/don-urgent.jpg" alt="">
-            <P class="text-center"></P>
             <div class="text-center mt-3">
-                <a href="#" class="btn btn-orange">Faire un don</a>
+                <h2>Appel à la Générosité</h2>
+                <p>Dans de nombreux daaras, les enfants
+talibés vivent dans des conditions 
+précaires, souvent sans accès suffisant à 
+des vêtements décents ou à une 
+alimentation équilibrée. Face à cette 
+réalité, nous lançons une grande opération 
+de solidarité pour leur venir en aide</p>
+                <a href="#" class="btn btn-orange">Je soutien ce projet</a>
             </div>
+            <!-- MISSION -->
             <section class="py-5">
                 <div class="container">
                     <h2 class="text-center">NOTRE MISSION</h2>
                     <P class="text-center"></P>
                 </div>
             </section>
+            <!-- POURQUOI NOUS SOUTENIR -->
             <Section class="bg-success text-white py-5 text-center">
                 <div class="container">
                     <h3>Pourquoi nous soutenir</h3>
@@ -66,6 +79,7 @@
                     <a href="#" class="btn btn-light">Faire un don</a>
                 </div>
             </Section>
+            <!-- A PROPOS DE NOUS-->
             <section class="py-5">
                 <div class="container text-center">
                     <h3 class="text-warning">A propos de nous</h3>
@@ -73,6 +87,7 @@
                     <a href="#" class="btn btn-success">En savoir plus</a>
                 </div>
             </section>
+            <!-- NOS ACTIONS -->
             <section class="py-5 bg-light">
                 <div class="container">
                     <h3 class="text-center">Nos actions</h3>
@@ -116,27 +131,31 @@
                     </div> 
                </div>
             </section>
+            <!-- DEMANDE DE DON -->
             <section class="py-5 text-center">
                 <div class="container">
-                    <h3>Besoin d'aide Faites une demande de don</h3>
+                    <h3>Besoin d'aide ?Faites une demande de don</h3>
                     <p>Notre association est la pour vous accompagner dans les moments difficiles. Si vous traversez une période de précarité ou si vous connaissez quelqu'un dans le besoin , vous pouvez nous adresserune demande de don.</p>
                     <a href="#"class="btn btn-orange">Faire une demande de don</a>
                 </div>
+                <!-- REMERCIEMENT -->
                 <section class="py-5 bg-light text-center">
                     <div class="container">
                         <h4>Merci pour vos dons</h4>
                         <p></p>
                         <div class="row mt-3">
-                            <!-- Images bénévoles (ajoutez vos images ici) -->
+                        <img src="images/don1.jpg" alt=""> 
+                        <img src="" alt="">
+                        <img src="images/don3.jpg" alt="">
+                        <img src="" alt="">
                         </div>
                     </div>
                 </section>
             </section>
         </div>
     </section>
-
+<!-- FOOTER -->
     <footer>
-
         <div class="row foot" style="background-color: #ff7f00;height: 200px;">
             <div class="col">
                 <img src="images/don-du-coeur.jpg" alt="" class="logo-footer">
@@ -168,7 +187,5 @@
                 <p class="text-center">©️ 2025 Don du Coeur. Tous droits réservés.</p>
             </div>
     </footer>
-    
 </body>
-
 </html>
