Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
         <a href="page-demamde-aide.html" class="menu">Demande d'aide</a>
         <a href="page-connexion.html" class="menu">Connexion</a>
     </nav>
- <!-- Hero Section -->
+ <!-- Carousel Bannière -->
     <section class="banniére">
-        <div class="container">
-            <h1>Bienvenue sur Don Du Coeur</h1>
-            <p>Ensemble, semons la solidarité et récoltons l'espoir.</p>
+        <div class="Carousel-item active">
+            <img src="images/banner.jpg"  class="d-block w-100 banner-img" alt="banniére">
+            <div class="Carousel-caption text-center" >
+            <h1 class="display-4">Bienvenue sur Don Du Coeur</h1>
+            <p class="lead">Ensemble, semons la solidarité et récoltons l'espoir.</p>
+            </div>
         </div>
     </section>
 <!-- STATS -->
@@ -68,14 +71,15 @@ de solidarité pour leur venir en aide</p>
             <section class="py-5">
                 <div class="container">
                     <h2 class="text-center">NOTRE MISSION</h2>
-                    <P class="text-center"></P>
+                    <P class="text-center">La mission de don du coeur est d'apporter une aide humanitaire efficace et humaine à toutes les personnes en détresses.Nous luttons contre l'exclusion social , la faim , l'isolement et injustice en agissant localement avec des bénévoles engagés.Nos actions reposent sur la solidarité , le respect de la dignité humaine et le transparence dans l'utilisation des ressources. </P>
+                    <img src="" alt="">
                 </div>
             </section>
             <!-- POURQUOI NOUS SOUTENIR -->
             <Section class="bg-success text-white py-5 text-center">
                 <div class="container">
-                    <h3>Pourquoi nous soutenir</h3>
-                    <p></p>
+                    <h3>Pourquoi nous soutenir?</h3>
+                    <p>Parce que chaque action menée est un pas vers une société plus juste et plus humaine. Votre soutien qu'il soit financier , matériel ou bénévole est éssentiel pour continuer nos projets.</p>
                     <a href="#" class="btn btn-light">Faire un don</a>
                 </div>
             </Section>
@@ -83,7 +87,8 @@ de solidarité pour leur venir en aide</p>
             <section class="py-5">
                 <div class="container text-center">
                     <h3 class="text-warning">A propos de nous</h3>
-                    <p>Nous sommes une association engagée pour le bien-etre des communautés vulnérables.Grace a l'implication de nos bénévoles et donateurs, nous menons des actions concrétes pour améliorer le quotidien des personnes en situation de précarité. Notre mission: servir avec humanité, construire avec espoir.<div class=""></div></p>
+                    <p>Nous sommes une association engagée pour le bien-etre des communautés vulnérables.Grace a l'implication de nos bénévoles et donateurs, nous menons des actions concrétes pour améliorer le quotidien des personnes en situation de précarité. Notre mission: servir avec humanité, construire avec espoir.
+                    <div class=""></div></p>
                     <a href="#" class="btn btn-success">En savoir plus</a>
                 </div>
             </section>
