Création se la page d'accueil

--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@ de solidarité pour leur venir en aide</p>
                         <div class="col-md-3 mb-4">
                             <div class="card">
                                 <div class="card-body">
+                                    <img src="images/kits-scolaire.jpg" alt="">
                                     <h5>Collecte et distribution de kits scolaires</h5>
-                                    <p></p>
+                                    <p>Pour que chaque enfant ait la chance de réuissir a l'école.</p>
                                 </div>
                             </div>
                         </div>
@@ -110,24 +111,27 @@ de solidarité pour leur venir en aide</p>
                <div class="col-md-3 mb-4">
                             <div class="card">
                                 <div class="card-body">
+                                    <img src="images/distribution-ndogou.jpg" alt="">
                                     <h5>Distribution de ndogou pendant le Ramadan</h5>
-                                    <p></p>
+                                    <p>Pour permettre aux familles de rompre le jeune dignement et dans la solidarité.</p>
                                 </div>
                            </div>
                     </div>
                      <div class="col-md-3 mb-4">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5>Construction d'un espace de jeux</h5>
-                                    <p></p>
+                                    <img src="images/set-setal.jpg" alt="">
+                                    <h5>Organisation d'une journée de Set Setal</h5>
+                                    <p>Nous avons organisé une journée de nettoyage communautaire pour rendre notre quartier plus propre et agréable.</p>
                                 </div>
                            </div>
                     </div>
                      <div class="col-md-3 mb-4">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5></h5>
-                                    <p>Organisation de dons de sang</p>
+                                    <img src="images/don-de-sang.jpg" alt="">
+                                    <h5>Organisation de dons de sang</h5>
+                                    <p>En collaboration avec des structures sanitaires comme la Croix-Rouge et les hopitaux.</p>
                                 </div>
                            </div>
                     </div>
