Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -58,13 +58,7 @@
             <img src="images/don-urgent.jpg" alt="">
             <div class="text-center mt-3">
                 <h2>Appel à la Générosité</h2>
-                <p>Dans de nombreux daaras, les enfants
-talibés vivent dans des conditions 
-précaires, souvent sans accès suffisant à 
-des vêtements décents ou à une 
-alimentation équilibrée. Face à cette 
-réalité, nous lançons une grande opération 
-de solidarité pour leur venir en aide</p>
+                <p>Dans de nombreux daaras, les enfants talibés vivent dans des conditions précaires, souvent sans accès suffisant à des vêtements décents ou à une alimentation équilibrée. Face à cette réalité, nous lançons une grande opération de solidarité pour leur venir en aide</p>
                 <a href="#" class="btn btn-orange">Je soutien ce projet</a>
             </div>
             <!-- MISSION -->
@@ -154,9 +148,9 @@ de solidarité pour leur venir en aide</p>
                         <p></p>
                         <div class="row mt-3">
                         <img src="images/don1.jpg" alt=""> 
-                        <img src="" alt="">
+                        <img src="images/don2.jpg" alt="">
                         <img src="images/don3.jpg" alt="">
-                        <img src="" alt="">
+                        <img src="images/aide.jpg" alt="">
                         </div>
                     </div>
                 </section>
