Création de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
         <a href="page-demamde-aide.html" class="menu">Demande d'aide</a>
         <a href="page-connexion.html" class="menu">Connexion</a>
     </nav>
- <!-- Carousel Bannière -->
-    <section class="banniére">
-        <div class="Carousel-item active">
-            <img src="images/banner.jpg"  class="d-block w-100 banner-img" alt="banniére">
-            <div class="Carousel-caption text-center" >
-            <h1 class="display-4">Bienvenue sur Don Du Coeur</h1>
+ <!--  Bannière -->
+    <section class="banner">
+        <div class="banner-content container">
+            <h1 class="display-5 fw-bold text-orange">Bienvenue sur Don Du Coeur</h1>
             <p class="lead">Ensemble, semons la solidarité et récoltons l'espoir.</p>
             </div>
         </div>
