--- a/index.html
+++ b/index.html
@@ -26,53 +26,62 @@
         <div class="banner-content container">
             <h1 class="display-5 fw-bold text-orange">Bienvenue sur Don Du Coeur</h1>
             <p class="lead">Ensemble, semons la solidarité et récoltons l'espoir.</p>
-            </div>
-        </div>
-    </section>
-<!-- STATS -->
-    <section class="py-5 text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col icon-box">
-                    <h3>+85</h3>
+            <div class="container position-relative z-2">
+            <div class="row justify-content-center mt-5 g-4">
+                <div class="col-md-3 stat-box">
+                    <h3 class="fw-bold">+85</h3>
                     <p>donations</p>
                 </div>
             </div>
-             <div class="col icon-box">
-                <h3>+50</h3>
+             <div class="col-md-3 stat-box">
+                <h3 class="fw-bold">+50</h3>
                 <p>projets réalisés</p>
              </div>
-              <div class="col icon-box">
-                <h3>+36</h3>
+              <div class="col-md-3 stat-box">
+                <h3 class="fw-bold">+36</h3>
                 <p>volontaires</p>
-              </div>
+            </div>
+            </div>
         </div>
     </section>
     <!-- DONS URGENTS-->
-    <section class="py-5 bg-light">
+    <section class="py-5 bg-light text-dark">
         <div class="container">
-            <h2 class="text-center">DONS URGENTS</h2>
-            <P class="text-center">Nous avons urgemment besoin de votre soutien pour mener à bien nos missions humanitaires. Chaque jour, des femmes, des enfants, des familles entières comptent sur notre aide pour se nourrir, se soigner, s’éduquer ou tout simplement vivre dignement. Grâce à votre contribution, nous pouvons continuer à organiser des collectes de vivres, des dons de sang, distribuer des kits scolaires et construire un avenir plus solidaire.Agissons ensemble, maintenant. Votre générosité peut tout changer.</P>
-            <img src="images/don-urgent.jpg" alt="">
-            <div class="text-center mt-3">
-                <h2>Appel à la Générosité</h2>
+            <h2 class="text-center fw-bold text-success mb-4">DONS URGENTS</h2>
+            <P class="text-center mb-5">Nous avons urgemment besoin de votre soutien pour mener à bien nos missions humanitaires. Chaque jour, des femmes, des enfants, des familles entières comptent sur notre aide pour se nourrir, se soigner, s’éduquer ou tout simplement vivre dignement. Grâce à votre contribution, nous pouvons continuer à organiser des collectes de vivres, des dons de sang, distribuer des kits scolaires et construire un avenir plus solidaire.Agissons ensemble, maintenant. Votre générosité peut tout changer.</P>
+            <div class="row align-items-center">
+                <div class="col-md-6 mb-4 mb-md-0">
+                <img src="images/don-urgent.jpg" alt="" class="img-fluid rounded shadow">
+                <div class="col-md-6">
+                    <div class="p-4 bg-success text-white rounded shadow">
+                <h2 class="orange-title-underline mb-3">Appel à la Générosité</h2>
                 <p>Dans de nombreux daaras, les enfants talibés vivent dans des conditions précaires, souvent sans accès suffisant à des vêtements décents ou à une alimentation équilibrée. Face à cette réalité, nous lançons une grande opération de solidarité pour leur venir en aide</p>
-                <a href="#" class="btn btn-orange">Je soutien ce projet</a>
+                <a href="#" class="btn btn-warning fw-bold mt-2">Je soutien ce projet</a>
+                </div>
+                </div>
+             </div>
             </div>
             <!-- MISSION -->
-            <section class="py-5">
+            <section class="py-5 bg-light">
                 <div class="container">
-                    <h2 class="text-center">NOTRE MISSION</h2>
+                    <div class="row align-items-center">
+                        <div class="col-md-7 order-1">
+                    <h2 class="text-success fw-bold">NOTRE MISSION</h2>
                     <P class="text-center">La mission de don du coeur est d'apporter une aide humanitaire efficace et humaine à toutes les personnes en détresses.Nous luttons contre l'exclusion social , la faim , l'isolement et injustice en agissant localement avec des bénévoles engagés.Nos actions reposent sur la solidarité , le respect de la dignité humaine et le transparence dans l'utilisation des ressources. </P>
-                    <img src="" alt="">
+                    <div class="col-md-5 order-2">
+                    <img src="images/mission.jpg" alt="" class="img-fluid rounded shadow">
+                    </div>
+                    </div>
+                    </div>
                 </div>
             </section>
             <!-- POURQUOI NOUS SOUTENIR -->
             <Section class="bg-success text-white py-5 text-center">
                 <div class="container">
                     <h3>Pourquoi nous soutenir?</h3>
-                    <p>Parce que chaque action menée est un pas vers une société plus juste et plus humaine. Votre soutien qu'il soit financier , matériel ou bénévole est éssentiel pour continuer nos projets.</p>
-                    <a href="#" class="btn btn-light">Faire un don</a>
+                    <p>Parce que chaque action menée est un pas vers une société plus juste et plus humaine. 
+                       Votre soutien qu'il soit financier , matériel ou bénévole est éssentiel pour continuer nos projets.</p>
+                    <a href="#" class="btn btn-orange mt-4">Faire un don</a>
                 </div>
             </Section>
             <!-- A PROPOS DE NOUS-->
